second page is now responsive

--- a/index.html
+++ b/index.html
@@ -198,6 +198,9 @@
                 <span>Goal App</span>
                 <span>Goal Live</span>
             </div>
+
+            <!-- social icon added  -->
+            
         </div>
     </footer>
 
