social icon added

--- a/index.html
+++ b/index.html
@@ -200,7 +200,11 @@
             </div>
 
             <!-- social icon added  -->
-            
+            <div class="socialIcon">
+                <span><i class="fa-brands fa-facebook-square"></i></span>
+                <span><i class="fa-brands fa-youtube"></i></span>
+                <span><i class="fa-brands fa-instagram"></i></span>
+            </div>
         </div>
     </footer>
 
