--- a/secondPage/index2.html
+++ b/secondPage/index2.html
@@ -50,17 +50,17 @@
                     <div class="blogButton">
                         <div class="buttonBox">
                             <button class="upcoming mbtn"><a href="#">Upcoming Match</a></button>
-                            <button class="group mbtn"><a  href="#">All Group</a></button>
-                            <button class="blog mbtn"><a  href="#">Blog</a></button>
+                            <button class="group mbtn"><a href="#">All Group</a></button>
+                            <button class="blog mbtn"><a href="#">Blog</a></button>
 
                         </div>
                     </div>
 
                     <!-- div for the all card for live match -->
                     <div class="liveMatchCard">
-                      <!-- single match -->
+                        <!-- single match -->
 
-                      <div class="matchLiveCardWrapper">
+                        <div class="matchLiveCardWrapper">
                             <div class="singleLiveCard">
                                 <div class="flagTitle">
                                     <img src="../images/germany Flag.png" alt="">
@@ -137,9 +137,9 @@
 
 
 
-                      </div>
+                        </div>
 
-                      
+
                     </div>
                 </div>
 
@@ -162,6 +162,13 @@
                 <span>Privacy Settings </span>
                 <span>Goal App</span>
                 <span>Goal Live</span>
+            </div>
+
+            <!-- social icon added  -->
+            <div class="socialIcon">
+                <span><i class="fa-brands fa-facebook-square"></i></span>
+                <span><i class="fa-brands fa-youtube"></i></span>
+                <span><i class="fa-brands fa-instagram"></i></span>
             </div>
         </div>
     </footer>
