--- a/index.html
+++ b/index.html
@@ -201,10 +201,11 @@
 
             <!-- social icon added  -->
             <div class="socialIcon">
-                <span><i class="fa-brands fa-facebook-square"></i></span>
-                <span><i class="fa-brands fa-youtube"></i></span>
-                <span><i class="fa-brands fa-instagram"></i></span>
+                <span><a href="https://www.facebook.com/mdtofayel.chowdhury.79/"><i class="fa-brands fa-facebook-square"></i></a></span>
+                <span><a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a></span>
+                <span><a href="https://www.instagram.com/tofayel43/"><i class="fa-brands fa-instagram"></i></a></span>
             </div>
+            
         </div>
     </footer>
 
